<resources>
    <string name="app_name">ChatSD</string>

    <string name="nome">Nome</string>
    <string name="sobrenome">Sobrenome</string>
    <string name="email">E-mail</string>
    <string name="numero">Numero</string>
    <string name="cadastrar">Cadastrar</string>


    <string name="usuario">Entre com os seus dados</string>
    <string name="emailinvalido">E-mail invalido</string>
    <string name="completetodos">Complete todos os campos</string>

    <string name="noconnection">Sem conexão à rede!</string>
    <string name="cadastrosuccessful">Cadastro realizado!</string>

    <string name="lisUsu">lista Usuarios</string>

    <string name="janeiro">Janeiro</string>
    <string name="fevereiro">Fevereiro</string>
    <string name="marco">Março</string>
    <string name="abril">Abril</string>
    <string name="maio">Maio</string>
    <string name="junho">Junho</string>
    <string name="agosto">Agosto</string>
    <string name="julho">Julho</string>
    <string name="setembro">Setembro</string>
    <string name="outubro">Outubro</string>
    <string name="novembro">Novembro</string>
    <string name="dezembro">Dezembro</string>

    <string name="jan">JAN</string>
    <string name="feb">FEV</string>
    <string name="mar">MAR</string>
    <string name="abr">ABR</string>
    <string name="mai">MAI</string>
    <string name="jun">JUN</string>
    <string name="jul">JUL</string>
    <string name="ago">AGO</string>
    <string name="set">SET</string>
    <string name="out">OUT</string>
    <string name="nov">NOV</string>
    <string name="dez">DEZ</string>


    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
</resources>
